test/conformance/chainsaw/mutating-policies/context/userinfo/admission/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: my-configmap
data:
  key: "value"
