test/conformance/chainsaw/mutating-policies/context/userinfo/admission/policy.yaml
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: mpol-record-creation-details
spec:
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["configmaps"]
        operations: ["CREATE"]
  mutations:
    - patchType: ApplyConfiguration
      applyConfiguration:
        expression: |
          Object{
            metadata: Object.metadata{
              annotations: {
                "kyverno.io/created-by": request.userInfo.username
              }
            }
          }
