test/conformance/chainsaw/mutating-policies/context/userinfo/admission/configmap-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: my-configmap
  annotations:
    kyverno.io/created-by: kubernetes-admin
data:
  key: "value"
