test/conformance/chainsaw/mutating-policies/context/userinfo/admission/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-image-data-lib
spec:
  concurrent: false
  steps:
    - name: create policy
      use:
        template: ../../../../_step-templates/create-policy.yaml
        with:
          bindings:
          - name: file
            value: policy.yaml
    - name: verify-policy
      use:
        template: ../../../../_step-templates/mutating-policy-ready.yaml
        with:
          bindings:
          - name: name
            value: mpol-record-creation-details
    - name: sleep
      try:
        - sleep:
            duration: 5s
    - name: create configmap
      try:
        - apply:
            file: configmap.yaml
        - assert:
            file: configmap-assert.yaml
